<resources>
    <string name="app_name">Nao Reveze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_peitoral">Peitoral</string>
    <string name="text_o_que_esta_treinando">O que está treinando?</string>
    <string name="text_qual_exercicio_subistituir">Qual exercício você deseja substituir?</string>
    <string name="nenhum_resultado_encontrado">Nenhum resultado encontrado.</string>
    <string name="text_altura_cm">Altura (ex.: 170cm)</string>
    <string name="text_cm">cm</string>
    <string name="text_peso_kg">Peso (ex.: 63.2)</string>
    <string name="text_kg">kg</string>
    <string name="text_calcular">Calcular</string>
    <string name="text_calculando">Calculando…</string>
    <string name="text_calcular_imc">Calcular seu IMC</string>


    <!-- Strings codigo IMC Fragment -->

    <string name="peso_abaixo">Abaixo do Peso</string>
    <string name="peso_normal">Normal</string>
    <string name="peso_sobrepeso">Sobrepeso</string>
    <string name="peso_grau01">Obesidade Grau I</string>
    <string name="peso_grau02">Obesidade Grau II</string>
    <string name="peso_grau03">Obesidade Grau III</string>
    <string name="titulo_resultado_imc">Calcule seu IMC</string>
    <string name="text_info_resultado_imc">Faça o cálculo aqui mesmo e conheça mais sobre o seu corpo.</string>


    <!-- Strings text info IMCFragment -->

    <string name="text_info_resultado_peso_abaixo">Você está abaixo do peso ideal. Isso pode ser apenas
        uma característica pessoal, mas também pode ser um sinal de desnutrição ou de algum problema de saúde.
        Caso esteja perdendo peso sem motivo aparente, procure um médico ou nutricionista.
    </string>

    <string name="text_info_resultado_peso_normal">Parabéns, você está com o peso normal.
        Recomendamos que mantenha hábitos saudáveis em seu dia a dia.
        Especialistas sugerem ingerir de 4 a 5 porções diárias de frutas, verduras e legumes, além da prática de exercícios físicos
        - pelo menos 150 minutos semanais.
    </string>

    <string name="text_info_resultado_peso_sobrepeso">Atenção! Alguns quilos a mais já são suficientes
        para que algumas pessoas desenvolvam doenças associadas,
        como diabetes e hipertensão. É importante rever seus hábitos. Procure um médico ou nutricionista.
    </string>

    <string name="text_info_resultado_peso_obesidade01">Sinal de alerta! O excesso de peso é fator de risco para desenvolvimento de outros
        problemas de saúde.A boa notícia é que uma pequena perda de peso já traz benefícios à saúde.
        Procure um médico ou nutricionista para definir o tratamento mais adequado para você.
    </string>

    <string name="text_info_resultado_peso_obesidade02">Sinal vermelho! Ao atingir este nível de IMC,
        o risco de doenças associadas está entre alto e muito alto. Busque ajuda de um profissional de saúde; não perca tempo.
    </string>

    <string name="text_info_resultado_peso_obesidade03">Sinal vermelho! Ao atingir este nível de IMC,
        o risco de doenças associadas é muito alto. Busque ajuda de um profissional de saúde; não perca tempo.
    </string>


    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="text_resultado">Resultado</string>
    <string name="text_info_pessoas_adultas_imc">* Cálculos válidos apenas para pessoas adultas.</string>
    <string name="text_0kg">0 Kg</string>
    <string name="text_peso">Peso</string>
    <string name="text_altura">Altura</string>
    <string name="text_0cm">0 Cm</string>
    <string name="progressButton_calcular">Calcular</string>
    <string name="text_mais_de_40">40.0+</string>
    <string name="text_nickname">Apelido</string>
    <string name="titulo_onboard_1">Otimize seu tempo na academia!</string>
    <string name="titulo_onboard_2">Acompanhe seu progresso</string>
    <string name="titulo_onboard_3">Treinos personalizados e offline</string>
    <string name="text_pular">Pular</string>
    <string name="text_começar">Começar</string>
    <string name="descrip_Onboard_1">Encontre substituições rápidas e eficientes dos exercícios para manter seu treino fluindo.</string>
    <string name="descrip_Onboard_2">Verifique suas medidas e calcule seu Índice de Massa Corporal (IMC) diretamente no NaoReveze App.</string>
    <string name="descrip_Onboard_3">Cadastre seus exercícios personalizados e acesse-os a qualquer momento, mesmo sem internet.</string>


</resources>