<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_app"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.screenfragments.FirstOnBoarding">

    <ImageView
        android:id="@+id/imageView_background_screen1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



    <TextView
        android:id="@+id/textView_pular"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:text="@string/text_pular"
        android:textColor="@color/app_color_white"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titulo_onboard_1"
        android:textColor="@color/app_color_white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descrip_Onboard_1"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_next"
        app:tint="@color/app_color_white"
        android:id="@+id/image_next"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>