<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app"
    tools:context=".fragments.CalculateImcFragment">


    <ImageButton
        android:id="@+id/icon_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="#00FFFFFF"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/app_color_white" />

    <TextView
        android:id="@+id/textView_titulo_tela"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="15dp"
        android:text="@string/calculadora_de_imc"
        android:textColor="@color/app_color_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/app_color_white"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:textColorHint="@color/seed"
            app:boxStrokeColor="@color/seed"
            app:counterEnabled="true"
            app:counterMaxLength="3"
            app:hintTextColor="@color/seed"
            app:startIconDrawable="@drawable/icon_altura"
            app:startIconTint="@color/seed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_altura_cm"
                android:inputType="number"
                android:maxEms="3"
                android:maxLength="3"
                android:maxLines="1"
                android:textColor="@color/seed"
                app:boxStrokeWidth="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="120dp"
            android:hint="@string/text_peso_kg"
            android:textColorHint="@color/seed"
            app:boxStrokeColor="@color/seed"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            app:hintTextColor="@color/seed"
            app:startIconDrawable="@drawable/inc_imc"
            app:startIconTint="@color/seed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxEms="4"
                android:maxLength="4"
                android:maxLines="1"
                android:textColor="@color/seed"
                app:boxStrokeWidth="10dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:id="@+id/frame_layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="30dp">

            <Button
                android:id="@+id/button_calcular_imc"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/app_color_white"
                android:backgroundTint="@color/button_background_selector"
                android:text="@string/progressButton_calcular"
                app:iconTint="@color/app_color_white"
                app:icon="@drawable/inc_imc"
                app:iconGravity="textEnd" />

            <ProgressBar
                android:id="@+id/progress_bar_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
